syntax = "proto3";

package chef.automate.domain.authz;
option go_package = "github.com/chef/automate/api/config/authz";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "authz-service"};

	reserved 1 to 2;

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc =  2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			chef.automate.infra.config.TLSCredentials tls = 2;
			Service service = 3;
			Logger logger = 4;
			Storage storage = 5;

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10130, protocol: "grpc" } ];
				google.protobuf.Int32Value project_limit = 3;
			}

			message Logger {
				google.protobuf.StringValue format = 1;
				google.protobuf.StringValue level = 2;
			}

			message Storage {
				reserved 3 to 4;
				google.protobuf.StringValue database = 1;
				google.protobuf.StringValue user = 2;
				google.protobuf.Int32Value max_connections = 5;
				google.protobuf.Int32Value max_idle_connections = 6;
			}
		}

		message Service {
		}
	}
}
